--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,11 +1,11 @@
-deploy.ant.properties.file=/home/m2iagl/tello/.netbeans/8.0.2/config/GlassFishEE6/Properties/gfv3-392097326.properties
-j2ee.appclient.tool.jvmoptions=-Djava.endorsed.dirs="/home/m2iagl/tello/GlassFish_Server/glassfish/lib/endorsed":"/home/m2iagl/tello/GlassFish_Server/glassfish/modules/endorsed" -javaagent:"/home/m2iagl/tello/GlassFish_Server/glassfish/lib/gf-client.jar"=mode=acscript,arg=-configxml,arg="/home/m2iagl/tello/GlassFish_Server/glassfish/domains/domain1/config/glassfish-acc.xml",client=jar=
+deploy.ant.properties.file=/home/m2iagl/sommerard/.netbeans/8.0.2/config/GlassFishEE6/Properties/gfv3703046646.properties
+j2ee.appclient.tool.jvmoptions=-Djava.endorsed.dirs="/opt/glassfish-4.1/glassfish/lib/endorsed":"/opt/glassfish-4.1/glassfish/modules/endorsed" -javaagent:"/opt/glassfish-4.1/glassfish/lib/gf-client.jar"=mode=acscript,arg=-configxml,arg="/home/m2iagl/sommerard/.netbeans/8.0.2/config/GF_4.1_7/domain1/config/glassfish-acc.xml",client=jar=
 j2ee.appclient.tool.mainclass=org.glassfish.appclient.client.AppClientFacade
 j2ee.appclient.tool.runtime=
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/m2iagl/tello/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=/home/m2iagl/tello/GlassFish_Server/glassfish
-j2ee.server.instance=[/home/m2iagl/tello/GlassFish_Server/glassfish:/home/m2iagl/tello/GlassFish_Server/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/home/m2iagl/tello/GlassFish_Server
-netbeans.user=/home/m2iagl/tello/.netbeans/8.0.2
-wa.copy.client.jar.from=/home/m2iagl/tello/GlassFish_Server/glassfish/domains/domain1/generated/xml
+j2ee.server.domain=/home/m2iagl/sommerard/.netbeans/8.0.2/config/GF_4.1_7/domain1
+j2ee.server.home=/opt/glassfish-4.1/glassfish
+j2ee.server.instance=[/opt/glassfish-4.1/glassfish:/opt/glassfish-4.1/glassfish/domains/domain1]deployer:gfv3ee6:localhost:4848
+j2ee.server.middleware=/opt/glassfish-4.1
+netbeans.user=/home/m2iagl/sommerard/.netbeans/8.0.2
+wa.copy.client.jar.from=/home/m2iagl/sommerard/.netbeans/8.0.2/config/GF_4.1_7/domain1/generated/xml
