--- a/webStore-ejb/nbproject/private/private.properties
+++ b/webStore-ejb/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=/home/martin/.netbeans/7.3/gfv31134435347.properties
+deploy.ant.properties.file=/home/m2iagl/sommerard/.netbeans/8.0.2/config/GlassFishEE6/Properties/gfv31583255667.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/martin-no-backup/opt/glassfishv3/glassfish/domains/domain1
-j2ee.server.home=/opt/glassfishv3/glassfish
-j2ee.server.instance=[/opt/glassfishv3/glassfish:/home/martin-no-backup/opt/glassfishv3/glassfish/domains/domain1]deployer:gfv3ee6:localhost:4848
-j2ee.server.middleware=/opt/glassfishv3
-netbeans.user=/home/martin/.netbeans/7.3
+j2ee.server.domain=/home/m2iagl/sommerard/.netbeans/8.0.2/config/GF_4.1_4/domain1
+j2ee.server.home=/opt/glassfish-4.1/glassfish
+j2ee.server.instance=[/opt/glassfish-4.1/glassfish:/opt/glassfish-4.1/glassfish/domains/domain1]deployer:gfv3ee6:localhost:4848
+j2ee.server.middleware=/opt/glassfish-4.1
+netbeans.user=/home/m2iagl/sommerard/.netbeans/8.0.2
