--- a/webStore-war/nbproject/private/private.properties
+++ b/webStore-war/nbproject/private/private.properties
@@ -1,7 +1,8 @@
-deploy.ant.properties.file=/home/m2iagl/tello/.netbeans/8.0.2/config/GlassFishEE6/Properties/gfv3-392097326.properties
+deploy.ant.properties.file=/home/m2iagl/sommerard/.netbeans/8.0.2/config/GlassFishEE6/Properties/gfv3703046646.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/m2iagl/tello/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=/home/m2iagl/tello/GlassFish_Server/glassfish
-j2ee.server.instance=[/home/m2iagl/tello/GlassFish_Server/glassfish:/home/m2iagl/tello/GlassFish_Server/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/home/m2iagl/tello/GlassFish_Server
-user.properties.file=/home/m2iagl/tello/.netbeans/8.0.2/build.properties
+j2ee.server.domain=/home/m2iagl/sommerard/.netbeans/8.0.2/config/GF_4.1_7/domain1
+j2ee.server.home=/opt/glassfish-4.1/glassfish
+j2ee.server.instance=[/opt/glassfish-4.1/glassfish:/opt/glassfish-4.1/glassfish/domains/domain1]deployer:gfv3ee6:localhost:4848
+j2ee.server.middleware=/opt/glassfish-4.1
+selected.browser=Chrome.INTEGRATED
+user.properties.file=/home/m2iagl/sommerard/.netbeans/8.0.2/build.properties
